--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-11-13 16:48+0300\n"
+"PO-Revision-Date: 2010-11-15 12:58+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -3928,9 +3928,13 @@ msgid ""
 "these issues might help you to solve some problems in your translation and "
 "improve the quality of your localisation work."
 msgstr ""
+"أحيانا يحتاج المترجم لبعض التعامل المتقدم مع المعاملات لتطويع كيفية عرضها. "
+"الأمثلة والأساليب في هذا القسم متقدمة قليلا، ولا تحتاج إلى استيعابها كلها "
+"مرة واحدة بل عليك الاهتمام بالمسائل التي قد تساعدك في حل بعض مشاكل الترجمة "
+"التي تواجهك والارتقاء بمستواها."
 
 msgid "Reordering"
-msgstr ""
+msgstr "تغيير الترتيب"
 
 msgid ""
 "Your translation might just work best with the variables in a different "
@@ -3938,6 +3942,9 @@ msgid ""
 "but it is common for programmers to use unnamed or symbolic variables such "
 "as “%d” and “%s”."
 msgstr ""
+"أحيانا تحتاج لتغيير ترتيب المتغيرات عن ترتيبها في الأصل للوصول إلى أنسب "
+"ترجمة. من السهل ترتيب المتغيرات ذات الأسماء، لكن المتغيرات الأكثر شيوعا "
+"رمزية بلا أسماء مثل “%d” و “%s”"
 
 msgid "There are %d photos on the device %s"
 msgstr ""
