Sorround variables with LRE..PDF

--- a/manual.po
+++ b/manual.po
@@ -3249,7 +3249,7 @@ msgid ""
 "number that will be filled in <t0/>later. There are many other ways in which "
 "the same effect can be achieved. Here are a few examples:"
 msgstr ""
-"الرمز “%d” هو المتغير هنا ووظيفته حجز مكان سيملؤه الرقم بعد ذلك. هناك صور "
+"الرمز ‪“%d”‬ هو المتغير هنا ووظيفته حجز مكان سيملؤه الرقم بعد ذلك. هناك صور "
 "أخرى تؤدي إلى نفس النتيجة:"
 
 msgid "<f0>There are </f0><f1>{}</f1> files remaining"
@@ -3313,7 +3313,7 @@ msgid ""
 msgstr ""
 "أحيانا يضع المبرمجون تعليقا يوضح ما الذي يمثله المتغير أو أي تغيير قد تحتاج "
 "عمله. إذا كان للمتغير اسم (مثل “number” في الأمثلة السابقة) فسيبين لك نوعه. "
-"من المفيد أن تتذكر أن “%d” يمثل دائما أرقاما، بينما يمثل “%s” نصا سيوضع "
+"من المفيد أن تتذكر أن ‪“%d”‬ يمثل دائما أرقاما، بينما يمثل ‪“%s”‬ نصا سيوضع "
 "مكانه. يمكن أن تحتوي الرسالة على أكثر من متغير وأكثر من نوع."
 
 msgid ""
@@ -3344,7 +3344,7 @@ msgid ""
 "software."
 msgstr ""
 "ستعطي هذه الرسالة نصا مثل “The download is 40% complete” أو “The download is "
-"100% complete”. عليك أن تنتبه إلى أن “%d” متغير لقيمة عددية (مثل 40 أو 100 "
+"100% complete”. عليك أن تنتبه إلى أن ‪“%d”‬ متغير لقيمة عددية (مثل 40 أو 100 "
 "في المثال السابق) بينما تمثل “%%” علامة نسبة مئوية واحدة في الترجمة."
 
 msgid ""
@@ -3383,7 +3383,7 @@ msgid ""
 "handled with more care, or might not allow reordering."
 msgstr ""
 "إذا تعددت المتغيرات فقد تحتاج لتغيير ترتيبها. المتغيرات ذات الأسماء يمكن "
-"ترتيبها بحرية، لكن المتغيرات الرمزية (مثل “%d” أو “%s”) تحتاج لمعاملة خاصة "
+"ترتيبها بحرية، لكن المتغيرات الرمزية (مثل ‪“%d”‬ أو ‪“%s”‬) تحتاج لمعاملة خاصة "
 "وأحيانا لا يمكن تغيير ترتيبها عن الأصل."
 
 msgid ""
@@ -3486,7 +3486,7 @@ msgid ""
 "correctly reflect your language."
 msgstr ""
 "دائما ما تحتوي صيغ الجموع السليمة على متغيرات (انظر صفحة <bf0>32</bf0>) لأن "
-"العدد غير معلوم، ففي المثال السابق يمثل المتغير “%d” عددا مجهولا. انتبه "
+"العدد غير معلوم، ففي المثال السابق يمثل المتغير ‪“%d”‬ عددا مجهولا. انتبه "
 "دائما لما يمثله المتغير ولا تنس ترتيب الجملة لتكون الترجمة طبيعية."
 
 msgid ""
@@ -3944,7 +3944,7 @@ msgid ""
 msgstr ""
 "أحيانا تحتاج لتغيير ترتيب المتغيرات عن ترتيبها في الأصل للوصول إلى أنسب "
 "ترجمة. من السهل ترتيب المتغيرات ذات الأسماء، لكن المتغيرات الأكثر شيوعا "
-"رمزية بلا أسماء مثل “%d” و “%s”"
+"رمزية بلا أسماء مثل ‪“%d”‬ و ‪“%s”‬"
 
 msgid "There are %d photos on the device %s"
 msgstr ""
