--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-20 19:10+0200\n"
-"PO-Revision-Date: 2010-11-22 20:21+0300\n"
+"PO-Revision-Date: 2010-11-22 23:04+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -2494,9 +2494,11 @@ msgid ""
 "and might change over time. Here are a few useful tips that might save you "
 "some time:"
 msgstr ""
+"تختلف الطريقة الأمثل للوصول إلى الترجمات السابقة من مشروع لآخر وقد تتغير مع "
+"الوقت. هذه بعض الملاحظات المفيدة التي قد توفر عليك بعض الوقت:"
 
 msgid "GNOME"
-msgstr ""
+msgstr "جنوم"
 
 msgid ""
 "Existing translations of GNOME is easily available from the website at "
@@ -2504,9 +2506,12 @@ msgid ""
 "language, and select any release set from the list. A link at the bottom of "
 "the page provides an archive with all the latest translations."
 msgstr ""
+"يمكن الوصول إلى ترجمات جنوم بسهولة عبر موقع <a0>http://l10n.gnome.org</a0> "
+"والمعروف باسم \"الأكاذيب اللعينة\". ابحث عن لغتك ثم أختر أيا من أطقم الإصدارات "
+"من القائمة، توجد وصلة في أسفل الصفحة لتنزيل أحدث نسخة من كل الترجمات."
 
 msgid "KDE"
-msgstr ""
+msgstr "كدي"
 
 msgid ""
 "Existing translations of KDE is easily available from the website at "
@@ -2514,9 +2519,12 @@ msgid ""
 "section “Archives” provides an archive with several files, including "
 "translations in the “messages” directory."
 msgstr ""
+"يمكن الوصول إلى ترجمات كدي بسهولة عبر موقع <a0>http://l10n.kde.org/</a0>. "
+"ابحث عن فريق ترجمة لغتك، وستجد وصلة في فقرة “الأرشيفات” لتنزيل ملفات "
+"الترجمة."
 
 msgid "Debian"
-msgstr ""
+msgstr "دبيان"
 
 msgid ""
 "The Debian project develops several pieces of software, such as the Debian "
@@ -2524,32 +2532,39 @@ msgid ""
 "country names). A single file with the translation memory of all projects "
 "developed by the Debian project is available here:"
 msgstr ""
+"يطوّر مشروع دبيان العديد من البرمجيات مثل أداة تنصيب دبيان وحزمة رموز أيزو "
+"(تحتوي على ترجمات لأسماء الدول واللغات). يمكن الحصول على ملف يحتوي ذاكرة "
+"ترجمة كل المشاريع التي تطورها دبيان، من:"
 
 msgid "http://i18n.debian.net/compendia/"
-msgstr ""
+msgstr "http://i18n.debian.net/compendia/"
 
 msgid ""
 "Translations of almost all packages distributed with the Debian project is "
 "available here:"
-msgstr ""
+msgstr "كما تتوفر ترجمات غالبية الحزم التي يوزعها مشروع دبيان، في:"
 
 msgid "http://i18n.debian.net/material/po/"
-msgstr ""
+msgstr "http://i18n.debian.net/material/po/"
 
 msgid ""
 "Although it might be better to obtain translations from the specific "
 "projects directly, getting them here might be more convenient, while "
 "possibly being a bit out of date."
 msgstr ""
+"من الأفضل الحصول على ملفات ترجمة كل مشروع مباشرة من موقعه، لكن الوصول إليها "
+"جميعا هنا قد يكون أسهل وإن كان من المحتمل ألا تكون أحدث نسخة من الترجمة."
 
 msgid "Pootle servers"
-msgstr ""
+msgstr "خواديم بوتل"
 
 msgid ""
 "Pootle is used to manage the translations of many projects such as "
 "OpenOffice.org, and you can usually obtain the translations easily from a "
 "Pootle server."
 msgstr ""
+"يستخدم بوتل لإدارة ترجمة العديد من المشاريع مثل أوبن أوفيس، ويمكن الحصول على "
+"الترجمات من خادوم بوتل بسهولة."
 
 msgid ""
 "Visit the page for your language in a specific project on the server, and go "
@@ -2557,9 +2572,12 @@ msgid ""
 "all the files inside. If it isn’t visible, you might need to log in, or ask "
 "for permission from the site administrator."
 msgstr ""
+"اذهب إلى صفحة لغتك في أي مشروع معين على الخادوم، ثم اذهب إلى لسان “ترجم” "
+"وسترى وصلات لتنزيل ملف مضغوط يحتوي على كل ملفات الترجمة. إذا لم تر هذه "
+"الوصلة فقد تحتاج الولوج إلى الخادوم أولا أو طلب الصلاحيات من مدير الموقع."
 
 msgid "Mozilla"
-msgstr ""
+msgstr "موزيلا"
 
 msgid ""
 "The current Mozilla localisation process makes it non-trivial to obtain "
@@ -2570,18 +2588,25 @@ msgid ""
 "official product releases, or during the development phases of upcoming "
 "versions of Mozilla projects:"
 msgstr ""
+"عملية التوطين الحالية في موزيلا تجعل من الصعب الوصول إلى الترجمات السابقة، "
+"وإن كانت متاحة عبر Open-Tran.eu. لا تتوفر أي ذاكرة ترجمة رسمية، لكن توجد "
+"ذواكر ترجمة غير رسمية منشورة بنسق TMX، وإن كانت المنتجات التي تشملها ذواكر "
+"الترجمة هذه غير محددة، ولا مدى دقتها بالنسبة للغات التي لم تصدر رسميا أو "
+"أثناء مراحل تطوير الإصدارات المستقبلية من مشاريع موزيلا:"
 
 msgid "http://www.frenchmozilla.fr/glossaire/TMX/"
-msgstr ""
+msgstr "http://www.frenchmozilla.fr/glossaire/TMX/"
 
 msgid ""
 "If you maintain your Mozilla translations in PO format using the Translate "
 "Toolkit (see page <bf0>12</bf0>), you can easily reuse your translations in "
 "the PO files."
 msgstr ""
+"إذا كنت تستخدم نسق PO في ترجماتك لمشاريع موزيلا (باستخدام عُدة الترجمة، انظر "
+"صفحة <bf0>12</bf0>) فيمكنك إعادة استخدام الترجمات من ملفات PO بسهولة."
 
 msgid "Collection of translation files"
-msgstr ""
+msgstr "تجميع ملفات الترجمة"
 
 msgid ""
 "If you have some translation files and want to combine them into a single "
@@ -2591,11 +2616,18 @@ msgid ""
 "<a1>po2tmx</a1> you can create a translation memory file in TMX format used "
 "by some translation tools."
 msgstr ""
+"إذا كان لديك ملفات ترجمة تريد جمعها في ملف واحد وتحويلها إلى ذاكرة ترجمة، "
+"فيمكنك استخدام بعض من أدوات عُدّة الترجمة. يمكن تخصيص أداة "
+"<a0>pocompendium</a0> عبر عدة خيارات (مثل كيفية التعامل مع المسرعات) ويمكنك "
+"استخدام <a1>po2tmx2</a1> لبناء ذاكرة ترجمة بنسق TMX الذي تستخدمه بعض أدوات "
+"الترجمة."
 
 msgid ""
 "For translations in other formats than the popular Gettext PO, there might "
 "be converters in the Translate Toolkit (see page <bf0>12</bf0>)."
 msgstr ""
+"كما قد تجد في عُدّة الترجمة أدوات للتحويل من أنساق الترجمة الأخرى غير نسق "
+"جتتكست الشائع (انظر صفحة <bf0>12</bf0>)."
 
 msgid ""
 "<f0>Machine translation</f0> refers to translation suggestions automatically "
@@ -5806,4 +5838,3 @@ msgstr ""
 
 msgid "F Wolff"
 msgstr ""
-
