--- a/manual.po
+++ b/manual.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-20 19:10+0200\n"
-"PO-Revision-Date: 2010-11-22 23:40+0300\n"
+"PO-Revision-Date: 2010-11-22 23:51+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -709,7 +709,6 @@ msgstr ""
 "الحرة المشهورة مساهمات ترجمة بلغات كثيرة، بل وأحيانا بلغات لا تجذب الاهتمام "
 "التجاري خارج عالم البرمجيات الحرة."
 
-#, fuzzy
 msgid ""
 "In terms of tools and file formats, obviously FOSS translation tools are the "
 "preferred tools to use for FOSS localisation. The PO format is by far the "
@@ -718,9 +717,9 @@ msgid ""
 "exchange of translation memories. An example workflow is discussed in the "
 "section on “<bf0>A simple localisation process</bf0>” on page <bf1>45</bf1>."
 msgstr ""
-"فيما يخص للأدوات يُفضل بالطبع استخدام أدوات حرة لتوطين البرمجيات الحرة. نَسَق "
-"الملفات PO هو الأكثر شيوعا، ولأنه يحوى النص المصدر إضافة إلى الترجمة (مثله "
-"مثل XLIFF) فالاهتمام أقل بإعادة الترجمة وتبادل ذواكر الترجمة. قسم "
+"فيما يخص للأدوات يُفضل بالطبع استخدام أدوات حرة لتوطين البرمجيات الحرة. "
+"نَسَق الملفات PO هو الأكثر شيوعا، ولأنه يحوى النص المصدر إضافة إلى الترجمة "
+"(مثله مثل XLIFF) فالاهتمام أقل بإعادة الترجمة وتبادل ذواكر الترجمة. قسم "
 "“<bf0>صيرورة توطين بسيطة</bf0>” في صفحة <bf1>44</bf1> يعرض مثالا على صيرورة "
 "التوطين."
 
@@ -794,7 +793,6 @@ msgstr ""
 "كلما حددت أهدافك بدقة استطعت تحديد أولويات المشروعات المختلفة و الوصول "
 "لأهدافك أسرع أو بنجاح أكبر."
 
-#, fuzzy
 msgid ""
 "Since you will try to reach your goals with limited resources (volunteers, "
 "money, time, etc.) you should plan for continuity and sustainability. Think "
@@ -1157,7 +1155,6 @@ msgstr ""
 msgid "http://virtaal.org/"
 msgstr "http://virtaal.org"
 
-#, fuzzy
 msgid ""
 "You don’t need to choose between these two tools – they complement each "
 "other. Even if a project is hosted on Pootle, you can still translate it "
@@ -1174,10 +1171,10 @@ msgstr ""
 "فالمشاريع المستضافة على بوتل تمكن ترجمتها بلا اتصال بالإنترنت باستخدام فرتال "
 "ثم رفع الملفات المترجمة إلى بوتل. قسم “<bf0>أدوات التوطين</bf0>” في صفحة "
 "<bf1>39</bf1> يشرح هاتين الأداتين بتفصيل أكبر. عدة أقسام في هذا الكتاب تتحدث "
-"عن وظائف معينة في هاتين الأداتين لذا من المحبذ تنصيب فرتال و فتح حساب في أحد "
-"خواديم بوتل لتجربة الإرشادات الواردة في الكتاب. سيقدم فرتال العون الأكبر "
-"أثناء الترجمة عبر تلوين الأجزاء المهمة لإبرازها، والتكامل مع كثير من الموارد "
-"المساعدة إذا كنت متصلا بالإنترنت."
+"عن وظائف معينة في هاتين الأداتين لذا من المحبذ تنصيب فرتال و فتح حساب في "
+"أحد خواديم بوتل لتجربة الإرشادات الواردة في الكتاب. سيقدم فرتال العون الأكبر "
+"أثناء الترجمة عبر تلوين الأجزاء المهمة لإبرازها، والتكامل مع كثير من "
+"الموارد المساعدة إذا كنت متصلا بالإنترنت."
 
 msgid ""
 "Both these programs are built on top of the <f0>Translate Toolkit</f0><f1> – "
@@ -1610,7 +1607,6 @@ msgstr "Ga go kgetho"
 msgid "ga go kgetho"
 msgstr "ga go kgetho"
 
-#, fuzzy
 msgid ""
 "Another area where guidelines for your team might help, is to ensure that "
 "attention is paid to punctuation and spacing. If the use of punctuation and "
@@ -1628,8 +1624,9 @@ msgstr ""
 "فمن المهم أن ينتبه المترجمون إلى الجُمَل التي تنتهي بنقطتين (:) أو علامة "
 "استفهام (?) أو علامة تعجب (!) أو ثلاث نقاط (…). لاحظ أن النقاط الثلاثة قد "
 "تكتب على الحاسوب ثلاثة نقاط متتالية أو محرفا واحدا يصورها كلها، وقد يصعب "
-"إدخاله في لوحة المفاتيح. يُسهِّل فِِرتال إدراج المحارف الخاصة كهذه بتمييزها على "
-"أنها مُدرج (المُدرجات مفهوم خاص في فرتال نتناوله بتفصيل في صفحة <bf0>40</bf0>)."
+"إدخاله في لوحة المفاتيح. يُسهِّل فِِرتال إدراج المحارف الخاصة كهذه بتمييزها "
+"على أنها مُدرج (المُدرجات مفهوم خاص في فرتال نتناوله بتفصيل في صفحة "
+"<bf0>40</bf0>)."
 
 msgid ""
 "If your language uses different punctuation from English, it might be good "
@@ -1779,7 +1776,6 @@ msgstr ""
 "النصّ قد يُستخدم في سياقات قد لا تتوقعها، فإذا بعدت الترجمة كثيرا عن الأصل "
 "فإنها قد لا تلائم بعض تلك السياقات."
 
-#, fuzzy
 msgid ""
 "<f0>Earlier we encouraged both </f0><f1>being careful</f1><f2> and </"
 "f2><f3>being bold</f3><f4>. This section might similarly seem to contradict "
@@ -1852,7 +1848,6 @@ msgstr "secure"
 msgid "Are you sure you want"
 msgstr "Are you sure you want"
 
-#, fuzzy
 msgid ""
 "As you can see, a term can consist of one or several words. They can be "
 "nouns, verbs, or any other type of word, or even a short phrase that we "
@@ -1993,7 +1988,6 @@ msgstr ""
 "أهمية وفائدة مسرد المصطلحات، لكن عليك بالطبع إبداء أولوية للمصطلحات الشائعة "
 "خاصة في بداية عملك."
 
-#, fuzzy
 msgid ""
 "You may only want to work on a smaller list of terms initially. Therefore it "
 "will be useful to know you are working on the most important ones. You might "
@@ -2015,10 +2009,11 @@ msgstr ""
 "اختيار مصطلحات موجودة فعلا في الترجمة التي تعمل عليها بدلا من العمل على "
 "مصطلحات قد تكون مفيدة لكنك لا تحتاجها في الوقت الحالي. من الحلول المناسبة "
 "لهذه المهمة استخدام أداة استخراج مصطلحات مثل <f0>poterminology</f0> من عُدّة "
-"الترجمة (انظر صفحة <bf1>12</bf1>)، كما يحتوي بوتل على نفس الوظيفة (انظر صفحة "
-"<bf2>42</bf2>). تعمل هذه الأدوات على تحليل النص لاستخراج قائمة المصطلحات "
-"المتكررة منه، قد لا تكون كل المصطلحات في القائمة الناتجة مهمة أو ذات دلالة "
-"تبرر تضمينها في المسرد لكن يمكن عدُّ هذه القائمة اقتراحات مبدئية توفر الوقت."
+"الترجمة (انظر صفحة <bf1>12</bf1>)، كما يحتوي بوتل على نفس الوظيفة (انظر "
+"صفحة <bf2>42</bf2>). تعمل هذه الأدوات على تحليل النص لاستخراج قائمة "
+"المصطلحات المتكررة منه، قد لا تكون كل المصطلحات في القائمة الناتجة مهمة أو "
+"ذات دلالة تبرر تضمينها في المسرد لكن يمكن عدُّ هذه القائمة اقتراحات مبدئية "
+"توفر الوقت."
 
 msgid ""
 "One disadvantage of a terminology extraction program, is that it probably "
@@ -2375,7 +2370,6 @@ msgstr ""
 "قد يساعد أيضا على إدراج ترجمة المصطلح دون الحاجة لكتابتها وهذا قد يوفر الوقت "
 "ويتفادى الأخطاء الإملائية."
 
-#, fuzzy
 msgid ""
 "Pootle can host a terminology project on the server with project specific "
 "terminology lists. For more information see page <bf0>43</bf0>."
@@ -2383,15 +2377,15 @@ msgstr ""
 "يمكن لبُوتِل استضافة مشروع مصطلحات على الخادوم يحوي مسارد مصطلحات تخص مشروع "
 "ترجمة معين. طالع صفحة <bf0>42</bf0> لمزيد من التفاصيل."
 
-#, fuzzy
 msgid ""
 "Virtaal can provide terminology suggestions from multiple sources, including "
 "terminology files on your computer, and certain network based services. It "
 "also provides easy access to look up phrases on websites. For more "
 "information see page <bf0>41</bf0> and the Virtaal preferences."
 msgstr ""
-"يدعم فِِرتال إظهار مقترحات للمصطلحات من عدة مصادر، بما فيها ملفات المصطلحات في "
-"الحاسوب، و خدمات خاصة عبر الشبكة. انظر صفحة <bf0>40</bf0> لمزيد من المعلومات."
+"يدعم فِِرتال إظهار مقترحات للمصطلحات من عدة مصادر، بما فيها ملفات المصطلحات "
+"في الحاسوب، و خدمات خاصة عبر الشبكة. انظر صفحة <bf0>40</bf0> لمزيد من "
+"المعلومات."
 
 msgid "Reuse"
 msgstr "إعادة الاستخدام"
@@ -2524,9 +2518,11 @@ msgid ""
 "and might change over time. Here are a few useful tips that might save you "
 "some time:"
 msgstr ""
+"تختلف الطريقة الأمثل للوصول إلى الترجمات السابقة من مشروع لآخر وقد تتغير مع "
+"الوقت. هذه بعض الملاحظات المفيدة التي قد توفر عليك بعض الوقت:"
 
 msgid "GNOME"
-msgstr ""
+msgstr "جنوم"
 
 msgid ""
 "Existing translations of GNOME is easily available from the website at "
@@ -2534,9 +2530,12 @@ msgid ""
 "language, and select any release set from the list. A link at the bottom of "
 "the page provides an archive with all the latest translations."
 msgstr ""
+"يمكن الوصول إلى ترجمات جنوم بسهولة عبر موقع <a0>http://l10n.gnome.org</a0> "
+"والمعروف باسم \"الأكاذيب اللعينة\". ابحث عن لغتك ثم أختر أيا من أطقم الإصدارات "
+"من القائمة، توجد وصلة في أسفل الصفحة لتنزيل أحدث نسخة من كل الترجمات."
 
 msgid "KDE"
-msgstr ""
+msgstr "كدي"
 
 msgid ""
 "Existing translations of KDE is easily available from the website at "
@@ -2544,9 +2543,12 @@ msgid ""
 "section “Archives” provides an archive with several files, including "
 "translations in the “messages” directory."
 msgstr ""
+"يمكن الوصول إلى ترجمات كدي بسهولة عبر موقع <a0>http://l10n.kde.org/</a0>. "
+"ابحث عن فريق ترجمة لغتك، وستجد وصلة في فقرة “الأرشيفات” لتنزيل ملفات "
+"الترجمة."
 
 msgid "Debian"
-msgstr ""
+msgstr "دبيان"
 
 msgid ""
 "The Debian project develops several pieces of software, such as the Debian "
@@ -2554,32 +2556,39 @@ msgid ""
 "country names). A single file with the translation memory of all projects "
 "developed by the Debian project is available here:"
 msgstr ""
+"يطوّر مشروع دبيان العديد من البرمجيات مثل أداة تنصيب دبيان وحزمة رموز أيزو "
+"(تحتوي على ترجمات لأسماء الدول واللغات). يمكن الحصول على ملف يحتوي ذاكرة "
+"ترجمة كل المشاريع التي تطورها دبيان، من:"
 
 msgid "http://i18n.debian.net/compendia/"
-msgstr ""
+msgstr "http://i18n.debian.net/compendia/"
 
 msgid ""
 "Translations of almost all packages distributed with the Debian project is "
 "available here:"
-msgstr ""
+msgstr "كما تتوفر ترجمات غالبية الحزم التي يوزعها مشروع دبيان، في:"
 
 msgid "http://i18n.debian.net/material/po/"
-msgstr ""
+msgstr "http://i18n.debian.net/material/po/"
 
 msgid ""
 "Although it might be better to obtain translations from the specific "
 "projects directly, getting them here might be more convenient, while "
 "possibly being a bit out of date."
 msgstr ""
+"من الأفضل الحصول على ملفات ترجمة كل مشروع مباشرة من موقعه، لكن الوصول إليها "
+"جميعا هنا قد يكون أسهل وإن كان من المحتمل ألا تكون أحدث نسخة من الترجمة."
 
 msgid "Pootle servers"
-msgstr ""
+msgstr "خواديم بوتل"
 
 msgid ""
 "Pootle is used to manage the translations of many projects such as "
 "OpenOffice.org, and you can usually obtain the translations easily from a "
 "Pootle server."
 msgstr ""
+"يستخدم بوتل لإدارة ترجمة العديد من المشاريع مثل أوبن أوفيس، ويمكن الحصول على "
+"الترجمات من خادوم بوتل بسهولة."
 
 msgid ""
 "Visit the page for your language in a specific project on the server, and go "
@@ -2587,9 +2596,12 @@ msgid ""
 "all the files inside. If it isn’t visible, you might need to log in, or ask "
 "for permission from the site administrator."
 msgstr ""
+"اذهب إلى صفحة لغتك في أي مشروع معين على الخادوم، ثم اذهب إلى لسان “ترجم” "
+"وسترى وصلات لتنزيل ملف مضغوط يحتوي على كل ملفات الترجمة. إذا لم تر هذه "
+"الوصلة فقد تحتاج الولوج إلى الخادوم أولا أو طلب الصلاحيات من مدير الموقع."
 
 msgid "Mozilla"
-msgstr ""
+msgstr "موزيلا"
 
 msgid ""
 "The current Mozilla localisation process makes it non-trivial to obtain "
@@ -2600,18 +2612,25 @@ msgid ""
 "official product releases, or during the development phases of upcoming "
 "versions of Mozilla projects:"
 msgstr ""
+"عملية التوطين الحالية في موزيلا تجعل من الصعب الوصول إلى الترجمات السابقة، "
+"وإن كانت متاحة عبر Open-Tran.eu. لا تتوفر أي ذاكرة ترجمة رسمية، لكن توجد "
+"ذواكر ترجمة غير رسمية منشورة بنسق TMX، وإن كانت المنتجات التي تشملها ذواكر "
+"الترجمة هذه غير محددة، ولا مدى دقتها بالنسبة للغات التي لم تصدر رسميا أو "
+"أثناء مراحل تطوير الإصدارات المستقبلية من مشاريع موزيلا:"
 
 msgid "http://www.frenchmozilla.fr/glossaire/TMX/"
-msgstr ""
+msgstr "http://www.frenchmozilla.fr/glossaire/TMX/"
 
 msgid ""
 "If you maintain your Mozilla translations in PO format using the Translate "
 "Toolkit (see page <bf0>12</bf0>), you can easily reuse your translations in "
 "the PO files."
 msgstr ""
+"إذا كنت تستخدم نسق PO في ترجماتك لمشاريع موزيلا (باستخدام عُدة الترجمة، انظر "
+"صفحة <bf0>12</bf0>) فيمكنك إعادة استخدام الترجمات من ملفات PO بسهولة."
 
 msgid "Collection of translation files"
-msgstr ""
+msgstr "تجميع ملفات الترجمة"
 
 msgid ""
 "If you have some translation files and want to combine them into a single "
@@ -2621,11 +2640,18 @@ msgid ""
 "<a1>po2tmx</a1> you can create a translation memory file in TMX format used "
 "by some translation tools."
 msgstr ""
+"إذا كان لديك ملفات ترجمة تريد جمعها في ملف واحد وتحويلها إلى ذاكرة ترجمة، "
+"فيمكنك استخدام بعض من أدوات عُدّة الترجمة. يمكن تخصيص أداة "
+"<a0>pocompendium</a0> عبر عدة خيارات (مثل كيفية التعامل مع المسرعات) ويمكنك "
+"استخدام <a1>po2tmx2</a1> لبناء ذاكرة ترجمة بنسق TMX الذي تستخدمه بعض أدوات "
+"الترجمة."
 
 msgid ""
 "For translations in other formats than the popular Gettext PO, there might "
 "be converters in the Translate Toolkit (see page <bf0>12</bf0>)."
 msgstr ""
+"كما قد تجد في عُدّة الترجمة أدوات للتحويل من أنساق الترجمة الأخرى غير نسق "
+"جتتكست الشائع (انظر صفحة <bf0>12</bf0>)."
 
 msgid ""
 "<f0>Machine translation</f0> refers to translation suggestions automatically "
@@ -2688,7 +2714,6 @@ msgstr ""
 "قد يقلل من قدرتهم على اتباع الأساليب اللغوية الصحيحة، لكن في ذات الوقت قد "
 "تكون الترجمة الآلية عونا كبيرا خاصة لمن لا يستطيع الكتابة سريعا."
 
-#, fuzzy
 msgid ""
 "Virtaal can provide suggestions from multiple sources. It can give "
 "suggestions from the current file, previously saved translations, and "
@@ -3045,7 +3070,6 @@ msgstr ""
 "\\ New” فهذا ليس خلوصا، وعموما أي شيء ليس في الجدول أعلاه فهو في الأغلب ليس "
 "خلوصا. انتبه أيضا لاستخدام نفس توزيع المسافات حول تتابعات الخلوص."
 
-#, fuzzy
 msgid ""
 "HTML is used to create web pages. You will also see XML (which looks very "
 "much like HTML) in GUI translations. They are both examples of markup "
@@ -3147,7 +3171,6 @@ msgstr "الصفات هي معلومات إضافية داخل الوسم."
 msgid "<body bgcolor=blue>"
 msgstr "<body bgcolor=blue>"
 
-#, fuzzy
 msgid ""
 "Here “bgcolor” is an attribute and “blue” is its value. Attributes, like "
 "tags, are never translated. <t0/>However some values can be translated. In "
@@ -3267,7 +3290,6 @@ msgstr ""
 "التي تختلف فيها صيغة الإفراد عن الجمع بشكل كبير ولا يمكن فيها استخدام طريقة "
 "الأقواس."
 
-#, fuzzy
 msgid ""
 "Variables are placeholders for numbers or some text that will be filled into "
 "a message when the program is running. For the software to be able to show a "
@@ -3283,13 +3305,12 @@ msgstr ""
 msgid "<f0>There are </f0><f1>%d</f1> files remaining"
 msgstr "<f0>There are </f0><f1>%d</f1> files remaining"
 
-#, fuzzy
 msgid ""
 "Here we see that “%d” is a variable that serves as a placeholder for the "
 "number that will be filled in later. There are many other ways in which the "
 "same effect can be achieved. Here are a few examples:"
 msgstr ""
-"الرمز “%d” هو المتغير هنا ووظيفته حجز مكان سيملؤه الرقم بعد ذلك. هناك صور "
+"الرمز ‪“%d”‬ هو المتغير هنا ووظيفته حجز مكان سيملؤه الرقم بعد ذلك. هناك صور "
 "أخرى تؤدي إلى نفس النتيجة:"
 
 msgid "<f0>There are </f0><f1>{}</f1> files remaining"
@@ -3375,7 +3396,6 @@ msgstr ""
 msgid "The download is %d<f0>%%</f0> complete."
 msgstr "The download is %d<f0>%%</f0> complete."
 
-#, fuzzy
 msgid ""
 "This message will display something like “The download is 40% complete” or "
 "“The download is 100% complete” with a single percentage sign shown to the "
@@ -3385,8 +3405,8 @@ msgid ""
 "translated software."
 msgstr ""
 "ستعطي هذه الرسالة نصا مثل “The download is 40% complete” أو “The download is "
-"100% complete”. عليك أن تنتبه إلى أن “%d” متغير لقيمة عددية (مثل 40 أو 100 "
-"في المثال السابق) بينما تمثل “%%” علامة نسبة مئوية واحدة في الترجمة."
+"100% complete”. عليك أن تنتبه إلى أن ‪“%d”‬ متغير لقيمة عددية (مثل 40 أو "
+"100 في المثال السابق) بينما تمثل “%%” علامة نسبة مئوية واحدة في الترجمة."
 
 msgid ""
 "If you are unsure how to deal with these cases, don’t worry: they are rare "
@@ -3395,7 +3415,6 @@ msgstr ""
 "لا تقلق إذا لم تعرف كيف تتعامل مع هذه الحالات فهي نادرة وتستطيع سؤال مطوري "
 "المشروع المساعدة حينها."
 
-#, fuzzy
 msgid "There are a few important things to keep in mind here:"
 msgstr "بعض الأمور التي ينبغي الانتباه إليها:"
 
@@ -3504,7 +3523,6 @@ msgstr ""
 "لاحظ الاختلاف في تمييز العدد بين الحالتين وفي تركيب الجملة أيضا (“was” و "
 "“were”)."
 
-#, fuzzy
 msgid ""
 "If your language does not have plurals, you will simply translate the two "
 "English strings with one string. This is common for some languages in Asia. "
@@ -3521,7 +3539,6 @@ msgstr ""
 "من حالتين سيترجم النص إلى جملة لكل حالة حسب الرقم المستخدم طبقا للقواعد "
 "اللغوية."
 
-#, fuzzy
 msgid ""
 "Since an unknown number of things are involved, proper plural messages "
 "always make use of variables (see page <bf0>33</bf0>). In the example above, "
@@ -3530,7 +3547,7 @@ msgid ""
 "correctly reflect your language."
 msgstr ""
 "دائما ما تحتوي صيغ الجموع السليمة على متغيرات (انظر صفحة <bf0>32</bf0>) لأن "
-"العدد غير معلوم، ففي المثال السابق يمثل المتغير “%d” عددا مجهولا. انتبه "
+"العدد غير معلوم، ففي المثال السابق يمثل المتغير ‪“%d”‬ عددا مجهولا. انتبه "
 "دائما لما يمثله المتغير ولا تنس ترتيب الجملة لتكون الترجمة طبيعية."
 
 msgid ""
@@ -3956,7 +3973,6 @@ msgstr "المسافات"
 msgid "Review"
 msgstr "المراجعة"
 
-#, fuzzy
 msgid ""
 "Review your choices in the running application. Clashes are not a big a "
 "problem, and can sort themselves out over time. Refer to the section on "
@@ -4023,7 +4039,6 @@ msgstr ""
 msgid "Omitting"
 msgstr "الحذف"
 
-#, fuzzy
 msgid ""
 "In some cases it might be possible to entirely leave out a variable in the "
 "translation. This can be <t0/>useful for the correct translation of certain "
@@ -4047,7 +4062,6 @@ msgstr ""
 msgid "Times and dates"
 msgstr "الوقت والتاريخ"
 
-#, fuzzy
 msgid ""
 "Variables are sometimes used to customise the display format for times and "
 "dates. Check the section on “<bf0>Number and date formats</bf0>” on page "
