--- a/manual.po
+++ b/manual.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-20 19:10+0200\n"
-"PO-Revision-Date: 2010-11-22 23:51+0300\n"
+"PO-Revision-Date: 2010-11-23 01:10+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -857,11 +857,11 @@ msgid ""
 msgstr ""
 "<f0>حافظ على الاتساق.</f0> الاتساق أحد الأهداف المهمة في التوطين. يجب أن "
 "تتأكد من الاتساق في استخدام المصطلحات، واتساق أسلوب الترجمة، وأن تتناغم مع "
-"مصطلحات وأسلوب التطبيقات الأخرى في المنصة التي سيعمل عليها التطبيق (وِندوز أو "
-"كدي أو جنوم، إلخ.) و خذ في الحسبان الاتساق مع اللغة التي يستخدمها الناس خارج "
-"عالم الحوسبة؛ في الجامعات والصحف والمجلات و غيرها، عندما يكون ذلك مفيدا. مع "
-"الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء الآخرين، لكن لا تسعى للاختلاف "
-"لمجرد الاختلاف."
+"مصطلحات وأسلوب التطبيقات الأخرى في المنصة التي سيعمل عليها التطبيق (وِندوز "
+"أو كدي أو جنوم، إلخ.) و خذ في الحسبان الاتساق مع اللغة التي يستخدمها الناس "
+"خارج عالم الحوسبة؛ في الجامعات والصحف والمجلات و غيرها، عندما يكون ذلك "
+"مفيدا. مع الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء الآخرين، لكن لا تسعى "
+"للاختلاف لمجرد الاختلاف."
 
 msgid ""
 "<f0>Be careful, but be bold. </f0><f1>This advice might sound like a "
@@ -1425,11 +1425,11 @@ msgid ""
 "on documenting your recommendations as these rules develop in your team."
 msgstr ""
 "من المستحسن وضع إطار لتوطين البرمجيات بلغتك، فعندما تتعدد أساليب أداء "
-"الأعمال قد يتَّبع كل مترجم أسلوبا مختلفة لأداء العمل ذاته، وعدم الاتساق الناشئ "
-"عن هذا يقلل من جودة الترجمة. وبدون معايير محددة قد تواجه المترجمين الجدد في "
-"فريقك اختيارات صعبة تُنفِّرهم وتقلل إنتاجيتهم. يعرض هذا القسم لمسألة الأسلوب. "
-"تُستحسن مناقشة هذه المسائل مع باقي المترجمين والمهتمين بالأمر وتوثيق هذه "
-"الأطر و صقلها مع الوقت."
+"الأعمال قد يتَّبع كل مترجم أسلوبا مختلفة لأداء العمل ذاته، وعدم الاتساق "
+"الناشئ عن هذا يقلل من جودة الترجمة. وبدون معايير محددة قد تواجه المترجمين "
+"الجدد في فريقك اختيارات صعبة تُنفِّرهم وتقلل إنتاجيتهم. يعرض هذا القسم "
+"لمسألة الأسلوب. تُستحسن مناقشة هذه المسائل مع باقي المترجمين والمهتمين "
+"بالأمر وتوثيق هذه الأطر و صقلها مع الوقت."
 
 msgid ""
 "Also keep in mind that users will probably get used to the style used in "
@@ -1655,9 +1655,9 @@ msgid ""
 msgstr ""
 "الاستخدام غير المعتاد للمسافات في النص الأصلي قد يكون عند قصد، مثل وضع "
 "مسافات في بداية الجملة أو في نهايتها، فقد يقصد به محاذاة النص أو الفصل بين "
-"تَحَكُّمات في واجهة البرمجية أو لضبط المسافات في جملة تنقسم إلى عدة أجزاء. و قد "
-"يكون خطأ برمجيا يتوجب الإبلاغ عنه. أحيانا تُوضع مسافتان بين الجملة و التي "
-"تليها، لكن لا يلزم اتباع هذه القاعدة، وإن كان اتباعها قد يساعد على ضمان "
+"تَحَكُّمات في واجهة البرمجية أو لضبط المسافات في جملة تنقسم إلى عدة أجزاء. و "
+"قد يكون خطأ برمجيا يتوجب الإبلاغ عنه. أحيانا تُوضع مسافتان بين الجملة و "
+"التي تليها، لكن لا يلزم اتباع هذه القاعدة، وإن كان اتباعها قد يساعد على ضمان "
 "الاتساق مع ما سبق. فحوص تدقيق الجودة الآلية في بعض البرمجيات (مثل بوتل) "
 "تحاول التنبيه إلى أي اختلافات من هذا النوع بين الأصل والترجمة."
 
@@ -1969,11 +1969,11 @@ msgid ""
 "course this example is artificial, but you can expect real benefits from "
 "even a small list with a few hundred relevant terms."
 msgstr ""
-"يظهر لنا أن وجود مسرد يحوي ترجمة كل من هذه المصطلحات يُيسر ترجمة النصّ السابق، "
-"كما ستأتي الترجمة متسقة مع الترجمات الأخرى ومع أسلوب الترجمة المتفق عليه، "
-"كما ستزيد إنتاجية المترجم إن كان يستخدم أداة ترجمة تسهل إدراج المصطلحات دون "
-"حاجة لكتابتها يدويا. ومع أن هذا المثال مُختلق إلا أنه يوضح الفوائد التي قد "
-"تجنيها حتى من مسرد لا يحوي إلا بضع مئات من المصطلحات."
+"يظهر لنا أن وجود مسرد يحوي ترجمة كل من هذه المصطلحات يُيسر ترجمة النصّ "
+"السابق، كما ستأتي الترجمة متسقة مع الترجمات الأخرى ومع أسلوب الترجمة المتفق "
+"عليه، كما ستزيد إنتاجية المترجم إن كان يستخدم أداة ترجمة تسهل إدراج "
+"المصطلحات دون حاجة لكتابتها يدويا. ومع أن هذا المثال مُختلق إلا أنه يوضح "
+"الفوائد التي قد تجنيها حتى من مسرد لا يحوي إلا بضع مئات من المصطلحات."
 
 msgid ""
 "If you are motivated to translate software, it might feel very demotivating "
@@ -4176,12 +4176,12 @@ msgid ""
 "can always download files from Pootle for translating offline in Virtaal if "
 "you prefer."
 msgstr ""
-"تحدثنا عن أداتي التوطين الرئيسيتين في هذا الكتاب سابقا في صفحة <bf0>12</"
-"bf0>. يكمل فِرتال وبوتل بعضهما البعض لتوفير أغلب الخصائص التي يحتاجها فريق "
-"الترجمة. يتيح بوتل الترجمة عبر الإنترنت مع التركيز على المشاركات التطوعية، "
-"بينما فرتال أداة ترجمة قوية تركز على البساطة والإنتاجية وتعمل بوجود اتصال "
-"بالإنترنت أو بدونه، ويمكنك تنزيل الملفات من بوتل لترجمتها في فرتال على جهازك "
-"إن كنت تفضل هذا."
+"تحدثنا عن أداتي التوطين الرئيسيتين في هذا الكتاب سابقا في صفحة "
+"<bf0>12</bf0>. يكمل فِرتال وبوتل بعضهما البعض لتوفير أغلب الخصائص التي "
+"يحتاجها فريق الترجمة. يتيح بوتل الترجمة عبر الإنترنت مع التركيز على "
+"المشاركات التطوعية، بينما فرتال أداة ترجمة قوية تركز على البساطة والإنتاجية "
+"وتعمل بوجود اتصال بالإنترنت أو بدونه، ويمكنك تنزيل الملفات من بوتل لترجمتها "
+"في فرتال على جهازك إن كنت تفضل هذا."
 
 msgid ""
 "Virtaal is a powerful translation tool, yet simple to use. You can increase "
@@ -4493,6 +4493,10 @@ msgid ""
 "detailed statistics about every file in the project, and have access to more "
 "functions for translation and review."
 msgstr ""
+"سترى في صفحة بوتل الرئيسية المشاريع واللغات الموجودة على الخادوم، كما ستجد "
+"ملخصا بتقدم كل مشروع أو لغة يطلعك على مدى اكتمال ونشاطه. عند اختيار لغة أو "
+"مشروع ستجد إحصائيات أكثر تفصيلا عن كل ملف في المشروع، كما ستتاح لك وسائل "
+"الترجمة والمراجعة."
 
 msgid ""
 "If you want to translate, the “Translate” tab provides access to the "
@@ -4502,18 +4506,30 @@ msgid ""
 "After completing the work offline in Virtaal, use the upload form at the "
 "bottom of the page to submit the work back to the Pootle server."
 msgstr ""
+"إذا أردت الترجمة سيتيح لك لسان “ترجم” الوصول إلى خصائص الترجمة سواء تنزيل "
+"الترجمات لترجمتها على حاسوبك أو الترجمة في بُوتل عبر الإنترنت. للوصول السريع "
+"إلى الأجزاء غير المكتملة من الترجمة اختر “ترجم بسرعة” للملف أو المجلد الذي "
+"تريده. ويمكنك تنزيل الملفات التي تريدها لترجمته على حاسوبك (باستخدام فِرتال "
+"مثلا) وبعد انتهاء الترجمة تستطيع رفع الملفات أسفل الصفحة لإعادة العمل بعد "
+"ترجمته إلى الخادوم."
 
 msgid ""
 "To review work (even your own work), visit the “Review” tab. It provides "
 "access to suggestions left by team members as well as quality checks that "
 "might indicate possible places of improvement in the translation."
 msgstr ""
+"لمراجعة الترجمة (بما فيها ترجماتك أنت) اذهب إلى لسان “راجع” الذي يتيح لك "
+"الوصول إلى الاقتراحات التي أضافها أعضاء الفريق بالإضافة إلى اختبارات الجودة "
+"التي قد تشير إلى المواضع التي قد تحتاج إلى تحسين."
 
 msgid ""
 "If you are the administrator for this project or language, you might also be "
 "able to configure permissions and perform certain file management work. "
 "Refer to the Pootle documentation for more information on these features."
 msgstr ""
+"إذا كانت لك صلاحيات إدارة هذا المشروع أو اللغة فتستطيع أيضا ضبط الصلاحيات "
+"وأداء مهام الإدارة الأخرى. راجع وثائق بُوتل لمزيد من المعلومات عن هذه "
+"الخصائص."
 
 msgid ""
 "Server administrators can add languages, projects, and also provide "
@@ -4522,6 +4538,9 @@ msgid ""
 "There should be contact details to allow Pootle users to contact the server "
 "administrators."
 msgstr ""
+"يستطيع مدراء الموقع إضافة لغات أو مشاريع جديدة وقوالب للترجمة (راجع قسم "
+"“<bf0>صيرورة توطين بسيطة</bf0>” صفحة <bf1>45</bf1> لمعرفة فائدة القوالب). "
+"عادة ما توفّر بيانات اتصال لتتيح للمستخدمين التواصل مع مدراء الخادوم."
 
 msgid ""
 "Pootle can help translators with terminology. Terminology can be specified "
@@ -4529,6 +4548,9 @@ msgid ""
 "language. A project called “terminology” can contain any files that will be "
 "used for terminology matching."
 msgstr ""
+"يمكن أن يساعد بُوتل المترجمين في مسألة المصطلحات، فيمكن وضع مسرد مصطلحات عام "
+"لكل لغة مع إمكانية تخطيها بإضافة مسارد لكل مشروع على حدة. يمكن يحتوي مشروع "
+"يسمى “terminology” على أي ملفات تستخدم لمطابقة المصطلحات."
 
 msgid ""
 "Project administrators can generate a list of frequently occurring terms "
@@ -4536,12 +4558,15 @@ msgid ""
 "standardise some frequently occurring terms. It is also possible to add "
 "extra entries."
 msgstr ""
+"يستطيع مدراء المشاريع توليد قائمة بالمصطلحات الشائعة من لسان “ترجم” في واجهة "
+"بُوتل، ويمكن أن يساعد هذا في تسريع توحيد المصطلحات الشائعة، كما يمكن إضافة "
+"مصلحات أخرى إلى القائمة."
 
 msgid "http://translate.sourceforge.net/wiki/pootle/terminology_matching"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/pootle/terminology_matching"
 
 msgid "Suggestions"
-msgstr ""
+msgstr "الاقتراحات"
 
 msgid ""
 "Pootle has the ability to optionally allow users to provide suggestions that "
@@ -4549,6 +4574,9 @@ msgid ""
 "files. Who is allowed to do what is determined by <t0/>the configuration of "
 "permissions for the project or the server."
 msgstr ""
+"يمكن في بوتل إعطاء المستخدمين صلاحية اقتراح ترجمات تحتاج للمراجعة قبل "
+"اعتمادها في الترجمة النهائية، وتتحكم في هذا إعدادات صلاحيات الخادوم أو "
+"المشروع."
 
 msgid ""
 "This allows for a team to form with different roles for different team "
@@ -4556,22 +4584,23 @@ msgid ""
 "requires suggestions to be checked before they become the real translations. "
 "This also allows the collection of alternative translations."
 msgstr ""
+"يتيح هذا إسناد أدوار مختلفة لأعضاء الفريق مع إمكانية جعل المراجعة خطوة "
+"إجبارية قبل اعتماد أي اقتراحات. كما يتيح هذا جمع ترجمات بديلة."
 
 msgid "http://translate.sourceforge.net/wiki/pootle/suggestions"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/pootle/suggestions"
 
 msgid "Quality checks"
-msgstr ""
+msgstr "اختبارات الجودة"
 
-#, fuzzy
 msgid ""
 "Pootle provides a powerful way of reviewing translations for quality by "
 "testing for several issues that can affect the quality of your translations. "
 "Refer to the section about “<bf0>Automated review</bf0>” on page <bf1>51</"
 "bf1>."
 msgstr ""
-"اختبر اختياراتك بتشغيل البرنامج. التعارض ليس مشكلة كبيرة وغالبا سيُحل مع "
-"الوقت. راجع قسم “<bf0>المراجعة في الميدان</bf0>” صفحة <bf1>51</bf1>."
+"يوفر بوتل وسيلة قوية لمراجعة جودة الترجمات واختبار العديد من المشكلات التي "
+"تؤثر عليها. راجع قسم “<bf0>المراجعة المؤتمتة</bf0>” صفحة <bf1>51</bf1>."
 
 msgid ""
 "If Pootle indicates a possible problem with a translation, it doesn't mean "
@@ -4580,12 +4609,15 @@ msgid ""
 "(GNOME, KDE, Mozilla, etc.) in the administration pages. This will improve "
 "the accuracy of the quality checks."
 msgstr ""
+"ليست كل المشاكل التي يشير إليها بُوتل أخطاء فعلية، إنما هو تنبيه باحتمال "
+"وجود خطأ عليك مراجعته. على مدراء بوتل تحديد نوع المشروع (جنوم، كدي، موزيلا، "
+"إلخ.) في صفحات الإدارة لمساعدة بوتل على إجراء اختبارات الجودة المناسبة."
 
 msgid "http://translate.sourceforge.net/wiki/pootle/checks"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/pootle/checks"
 
 msgid "Searching"
-msgstr ""
+msgstr "البحث"
 
 msgid ""
 "Pootle provides a searching functionality that allows translators and "
@@ -4594,11 +4626,14 @@ msgid ""
 "things you want to work on, see how issues were solved before, or to verify "
 "consistency in your translations."
 msgstr ""
+"يوفر بوتل خاصية بحث تتيح للمترجمين والمراجعين البحث في الترجمات. ستجد مربع "
+"البحث في أعلى الصفحة. يمكنك استخدامه للبحث عن أشياء محددة تريد العمل عليها "
+"أو كيف حُلت بعض المشاكل سابقا أو للتأكد من اتساق الترجمات المختلفة."
 
 msgid ""
 "Search results are up to date, and will reflect the current translations in "
 "Pootle."
-msgstr ""
+msgstr "نتائج البحث دائما حديثة وتعكس الترجمات الحالية الموجودة على بوتل."
 
 msgid "Localisation projects"
 msgstr ""
