--- a/manual.po
+++ b/manual.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-20 19:10+0200\n"
-"PO-Revision-Date: 2010-11-23 01:18+0300\n"
+"PO-Revision-Date: 2010-11-23 12:14+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -4635,7 +4635,7 @@ msgid ""
 msgstr "نتائج البحث دائما حديثة وتعكس الترجمات الحالية الموجودة على بوتل."
 
 msgid "Localisation projects"
-msgstr ""
+msgstr "مشروعات التوطين"
 
 msgid ""
 "In the simplest case, you might be offered a single file to translate, open "
@@ -4648,6 +4648,12 @@ msgid ""
 "project Tux Paint, which is very simple and an ideal starting point (see "
 "page <bf0>57</bf0>)."
 msgstr ""
+"في أبسط حالات الترجمة تُعطى ملفا واحدة لترجمته فتفتحه في برنامج ترجمة مثل "
+"فرتال ثم تعيده إلى المطورين بعد ترجمته ومراجعته. عادة ما تكون الأمور أكثر "
+"تعقيدا، لكن بعض المشاريع تعمل بهذه الصيرورة، خاصة عندما تكون المرة الأولى "
+"التي يُترجم فيها البرنامج إلى لغتك. يمكنك تبسيط الأمور على نفسك بتفادي "
+"المشاريع المعقدة في البداية. في فصل دراسات الحالة (صفحة <bf0>57</bf0>) ستجد "
+"وصفا لمشروع \"رسم تُكس\" وهو مشروع بسيط جدا يصلح للبدء به."
 
 msgid ""
 "In the general case, however, you might need to perform extra steps, or you "
@@ -4656,9 +4662,13 @@ msgid ""
 "update the translation file to contain all the newest strings to translate, "
 "so that it corresponds to the program version you are translating."
 msgstr ""
+"الحالات العادية قد تنطوي على خطوات إضافية أو قد تحتاج لتوليد ملفات الترجمة "
+"بنفسك متبعا خطوات محددة. في حال وجود ترجمة سابقة سيتعين عليك تحديث ملفات "
+"الترجمة لتحتوي كل المقاطع الجديدة التي تحتاج للترجمة، بحيث تتطابق الترجمة مع "
+"إصدارة البرنامج التي تترجمها."
 
 msgid "A lot of projects follow a process similar to this:"
-msgstr ""
+msgstr "تتبع كثيرا من المشاريع صيرورة مشابهة لهذا:"
 
 msgid "… <f0>TODO: a diagram to show template upgrade process</f0> …"
 msgstr ""
@@ -4667,25 +4677,31 @@ msgid ""
 "A translation template is generated from the source code (programming files) "
 "containing all the translatable text."
 msgstr ""
+"يُوَلّد قالب ترجمة يحتوي كل النصوص التي ستترجَم من الكود المصدري (ملفات "
+"البرمجة)."
 
 msgid ""
 "New translations simply start from this template. Existing translations are "
 "upgraded to conform to the new template."
 msgstr ""
+"تبدأ الترجمات الجديدة بترجمة هذا القالب، وملفات الترجمة القديمة تُحدّث "
+"لتطابق القالب الجديد."
 
 msgid ""
 "Translators translate the file, often also performing some review stages."
-msgstr ""
+msgstr "يترجم الملف، وأحيانا يخضع أيضا للمراجعة."
 
 msgid ""
 "The finalised version is submitted to the project, and will form the start "
 "of any future work in this language."
-msgstr ""
+msgstr "ترسل النسخة النهائية للمشروع، وستُبنى عليها أي ترجمات مستقبلية."
 
 msgid ""
 "Note that you should never need to start translating from scratch if some "
 "previous translation is available."
 msgstr ""
+"لاحظ أنك لا تحتاج أبدا للبدء من الصفر في حال وجود أي ترجمات سابقة بل تكمل "
+"عليها."
 
 msgid ""
 "To translate an application, you will need to find the files to work on. "
@@ -4695,6 +4711,10 @@ msgid ""
 "straight forward. However, even if they don’t, things might be quite "
 "predictable."
 msgstr ""
+"لترجمة أي برنامج تحتاج الملفات التي ستعمل عليها. الكثير من المشاريع توثق "
+"كيفية الحصول على ملفات الترجمة وإرسالها إلى المشروع عند الانتهاء منها. هذه "
+"الخطوات في الأغلب بسيطة إذا كان المشروع التي تستخدم بُوتل، لكن حتى المشاريع "
+"التي لا تستخدمه غالبا ما تحدد فيها خطوات واضحة."
 
 msgid ""
 "Many projects might simply make a single file per language available for "
