--- a/manual.po
+++ b/manual.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-20 19:10+0200\n"
-"PO-Revision-Date: 2010-11-25 02:55+0300\n"
+"PO-Revision-Date: 2010-11-25 03:02+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -4736,7 +4736,7 @@ msgid ""
 "instructions about submitting, such as creating a bug report and attaching "
 "your translation."
 msgstr ""
-"الكثير من المشروعات توفر ملفا واحدا لكل لغة وقد يكون كل ما عليك هو تنزيل "
+"توفر الكثير من المشروعات ملفا واحدا لكل لغة وقد يكون كل ما عليك هو تنزيل "
 "الملف ثم ترجمته وإرساله إلى المطور، وبعض المشروعات تضع تعليمات محددة لإرسال "
 "الملف (مثل فتح بلاغ علة وإرفاق الترجمة به)."
 
@@ -4757,7 +4757,7 @@ msgid ""
 "f4><f5><bf6>48</bf6></f5><f7> in the section on “</f7><f8><bf9>Version "
 "control systems</bf9></f8><f10>”.</f10>"
 msgstr ""
-"بعض المشروعات تتوقع منك أن تتعامل مع <f1>نظام إدارة الإصدارات</f1> الذي "
+"تتوقع بعض المشروعات منك أن تتعامل مع <f1>نظام إدارة الإصدارات</f1> الذي "
 "يستخدمونه. تستخدم أنظمة إدارة الإصدارات لإدارة كل ملفات المشروع وهذا يشمل "
 "ملفات الترجمة، وتُطوّر أغلب البرمجيات باستخدام هذه الأنظمة، وفي حالة مشروعات "
 "البرمجيات الحرة تكون متاحة للعموم، وقد تكون الطريقة المفضلة للحصول على "
@@ -5084,9 +5084,9 @@ msgid ""
 "translation to one version of the product, and therefore only to one branch "
 "in the version control system. Ask the programmers if you are unsure."
 msgstr ""
-"الفروع هي طريقة للعمل على نسختين مختلفتين من منتج ما في نفس الوقت. قد يكون "
-"عليك إرسال الترجمات إلى نسخة واحدة من المنتج وبالتالي فرع واحد في نظام إدارة "
-"الإصدارات، وعليك سؤال المطورين للتأكد."
+"<f0>الفروع</f0> هي طريقة للعمل على نسختين مختلفتين من منتج ما في نفس الوقت. "
+"قد يكون عليك إرسال الترجمات إلى نسخة واحدة من المنتج وبالتالي فرع واحد في "
+"نظام إدارة الإصدارات، وعليك سؤال المطورين للتأكد."
 
 msgid "Some of the principles of version control systems are explained here:"
 msgstr "تشرح الصفحة التالية بعضا من مبادئ نظم إدارة الإصدارات:"
