Make sure all keyboard keys are inclused in <>

--- a/manual.po
+++ b/manual.po
@@ -3594,8 +3594,8 @@ msgstr ""
 "ما بسرعة. إذا نظرت إلى شريط القوائم في أي تطبيق فستجد خطًا تحت بعض الحروف في "
 "عناوين القوائم. لاحظ الخط تحت الحرف الأول في كلٍ من <f13><f14>F</f14></"
 "f13>ile و <f15><f16>E</f16></f15>dit و <f17><f18>V</f18></f17>iew. لفتح "
-"قائمة ملف تضغط Alt+F. ستلاحظ كذلك أن أغلب عناصر القائمة لها مُسرِّعات، فللوصول "
-"إلى <f19><f20>O</f20></f19>pen تضغط <f21>o</f21> بعد الضغط على Alt+F."
+"قائمة ملف تضغط <Alt+F>. ستلاحظ كذلك أن أغلب عناصر القائمة لها مُسرِّعات، فللوصول "
+"إلى <f19><f20>O</f20></f19>pen تضغط <f21>o</f21> بعد الضغط على <Alt+F>."
 
 msgid ""
 "An <f0>accelerator marker</f0> is the special character we use to mark "
@@ -4231,7 +4231,7 @@ msgstr ""
 "الأيمن على الملف."
 
 msgid "You can also run Virtaal and open a file with File→Open or Ctrl+O."
-msgstr "يمكن أيضا تشغيل فرتال ثم فتح ملف من قائمة ملف->افتح أو Ctrl+O."
+msgstr "يمكن أيضا تشغيل فرتال ثم فتح ملف من قائمة ملف->افتح أو <Ctrl+O>."
 
 msgid "Supported file formats include:"
 msgstr "تشمل أنساق الملفات المدعومة:"
@@ -4284,7 +4284,7 @@ msgstr ""
 "المصدر أيضا."
 
 msgid "You can undo normally using Ctrl+Z."
-msgstr "يمكنك التراجع عما كتبته بضغط Ctrl+Z كالمعتاد."
+msgstr "يمكنك التراجع عما كتبته بضغط <Ctrl+Z> كالمعتاد."
 
 msgid "Time savers"
 msgstr "أسلوب اختصار الوقت"
@@ -4303,7 +4303,7 @@ msgstr ""
 "يوفر فرتال عليك بعض الوقت بمحاولة إكمال الكلمات الطويلة. ستقترح وظيفةُ "
 "الإكمال التلقائي كلمة محتملة ويمكنك قبول الاقتراح بضغط <Tab>، أو إذا لم يكن "
 "الاقتراح هو المطلوب فيمكنك مواصلة الكتابة، وإذا قبلت اقتراحا لا تريده فيمكنك "
-"التراجع عنه بضغط Ctrl+Z كالمعتاد."
+"التراجع عنه بضغط <Ctrl+Z> كالمعتاد."
 
 msgid "Auto-correction"
 msgstr "التصويب التلقائي"
@@ -4321,7 +4321,7 @@ msgstr ""
 msgid ""
 "If Virtaal automatically corrected something which you didn't want, you can "
 "simply undo the step with Ctrl+Z."
-msgstr "إذا صوَّبَ فرتال تلقائيا شيئا لا تريده فيمكن التراجع عنه بضغط Ctrl+Z."
+msgstr "إذا صوَّبَ فرتال تلقائيا شيئا لا تريده فيمكن التراجع عنه بضغط <Ctrl+Z>."
 
 msgid "Copy original to target"
 msgstr "نسخ النصّ المَصدَر إلى الترجمة"
@@ -4355,7 +4355,7 @@ msgid ""
 "If you don't want the changes to the source text that Virtaal automatically "
 "did, you can simply undo the step with Ctrl+Z."
 msgstr ""
-"إذا كنت لا تريد هذه التغييرات التلقائية في النص فيمكن التراجع عنها بضغط Ctrl"
+"إذا كنت لا تريد هذه التغييرات التلقائية في النص فيمكن التراجع عنها بضغط <Ctrl>"
 "+Z."
 
 msgid "Copy a placeable to the target"
@@ -4400,8 +4400,8 @@ msgid ""
 "same effect."
 msgstr ""
 "إن كانت لدى فرتال اقتراحات من ذاكرة الترجمة أو الترجمة الآلية فسيعرضها تحت "
-"منطقة التحرير، و عندها يمكنك وضع المُقتَرَحِ الأول في حقل الترجمة بضغط Ctrl+1 أو "
-"الثاني بضغط Ctrl+2 وهكذا، أو بالنقر المزدوج بالفأرة على الاقتراح الذي تريده."
+"منطقة التحرير، و عندها يمكنك وضع المُقتَرَحِ الأول في حقل الترجمة بضغط <Ctrl+1> أو "
+"الثاني بضغط <Ctrl+2> وهكذا، أو بالنقر المزدوج بالفأرة على الاقتراح الذي تريده."
 
 msgid "Navigation"
 msgstr "التنقل"
