--- a/manual.po
+++ b/manual.po
@@ -3387,7 +3387,7 @@ msgid ""
 msgstr ""
 "أحيانا يضع المبرمجون تعليقا يوضح ما يمثله المتغير و أية تغيير مطلوب. إذا كان "
 "اسم المتغير ذا دلالة (مثل “number” في الأمثلة السابقة) فسيبين لك نوعه. من "
-"المفيد تذكُّرِ أن “%d” يمثل دوما عددا، بينما يمثل “%s” نصّا سيحل محلّه. يمكن أن "
+"المفيد تذكُّرِ أن “‪%d‬” يمثل دوما عددا، بينما يمثل “‪%s‬” نصّا سيحل محلّه. يمكن أن "
 "تحتوي الرسالة على أكثر من متغير من أكثر من نوع."
 
 msgid ""
@@ -3459,7 +3459,7 @@ msgid ""
 "handled with more care, or might not allow reordering."
 msgstr ""
 "إذا تعددت المتغيرات فقد يتطلّب الأمر تغيير ترتيبها. المتغيرات ذات الأسماء "
-"يمكن ترتيبها بلا قيد، لكن المتغيرات الرمزية (مثل “%d” أو “%s”) تتطلب معاملة "
+"يمكن ترتيبها بلا قيد، لكن المتغيرات الرمزية (مثل “‪%d‬” أو “‪%s‬”) تتطلب معاملة "
 "خاصة وأحيانا لا يمكن تغيير ترتيبها عمّا في المصدر."
 
 msgid ""
