--- a/manual.po
+++ b/manual.po
@@ -48,8 +48,8 @@ msgid ""
 "it, while other people might be entirely locked out, or unable to fully "
 "enjoy the benefits that the technology brings."
 msgstr ""
-"تحتوي كثير من التقنيات التي نتعامل معها --مثل الحواسيب ومواقع الوب والهواتف "
-"المحمولة-- على نصوص بلغة ما، وهي غالبا إحدى اللغات الأكثر انتشارا في العالم "
+"تحتوي كثير من التقنيات التي نتعامل معها –مثل الحواسيب ومواقع الوب والهواتف "
+"المحمولة– على نصوص بلغة ما، وهي غالبا إحدى اللغات الأكثر انتشارا في العالم "
 "مثل الإنگليزية أو الفرنسية، مما يقصر إمكانية استخدام تلك التقنيات على من "
 "يفهمون تلك اللغات، ويحرم غيرهم من استخدام التقنية أو الانتفاع بكل فوائدها."
 
@@ -220,7 +220,7 @@ msgid "13"
 msgstr "13"
 
 msgid "Codes and locales – initial support for your language"
-msgstr "الرموز والمَحَلِّيات -- الدعم الأوَّلِيُّ للغتك"
+msgstr "الرموز والمَحَلِّيات – الدعم الأوَّلِيُّ للغتك"
 
 msgid "Useful extras"
 msgstr "إضافات مفيدة"
@@ -1366,7 +1366,7 @@ msgid ""
 "(for online translation) or in Virtaal, depending on where you will do your "
 "work"
 msgstr ""
-"مُدَقِّقٌ إملائيٌ -- تحقق من وجود مدقق إملائي و تفعيله في متصفح الوِب (إذا كنت "
+"مُدَقِّقٌ إملائيٌ – تحقق من وجود مدقق إملائي و تفعيله في متصفح الوِب (إذا كنت "
 "تترجم عبر الوب) أو في فِرتال."
 
 msgid "rules of spelling, orthography or grammar for your language"
@@ -3571,7 +3571,7 @@ msgid ""
 "plural forms work in your language. The following page probably contains "
 "what is needed:"
 msgstr ""
-"قد يطلب منك المبرمجون --في حالات قليلة-- معلومات إضافية عن قواعد التعامل مع "
+"قد يطلب منك المبرمجون –في حالات قليلة– معلومات إضافية عن قواعد التعامل مع "
 "صيغ الجمع في لغتك. قد تجد المعلومات المطلوبة في هذه الصفحة:"
 
 msgid "http://translate.sourceforge.net/wiki/l10n/pluralforms"
